# naboo

./: .gitignore  README.md  pyproject.toml  pytest.ini  ruff.toml
naboo/: __init__.py  db.py
tests/: test_db.py
