[project]
name = 'naboo'
version = '0.1.20'
description = ''

license = 'MIT'

authors = [{name = 'Brendan Doms'}]

readme = 'README.md'

requires-python = '>=3.12'

dependencies = [
    'asyncpg == 0.31.0'
]

[project.urls]
repository = 'https://github.com/bdoms/naboo'
homepage = 'https://github.com/bdoms/naboo'

[dependency-groups]
dev = [
    'pytest == 9.0.2',
    'pytest-asyncio == 1.3.0',
    'pytest-env == 1.2.0',
    'ruff == 0.15.0'
]
